[package]
name = "former"
version = "0.1.0"
edition = "2024"

[dependencies]
governor = "0.6"
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "macros", "chrono"] }
chrono = { version = "0.4", features = ["serde"] } 
tower-http = { version = "0.5", features = ["cors"] }
tower = "0.5"
dotenvy = "0.15.7"
